--- a/myCalculator/app/src/main/res/layout/activity_main.xml
+++ b/myCalculator/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="3dp"
+        android:layout_weight="1"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
         >
 
 
@@ -39,7 +41,7 @@
             android:layout_margin="2dp"
             android:id="@+id/button7"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:onClick="onDigit"
             android:textColor="@color/white"
@@ -53,10 +55,11 @@
             android:layout_margin="2dp"
             android:id="@+id/button8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/n8"
+            android:onClick="onDigit"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
@@ -68,13 +71,14 @@
             android:layout_margin="2dp"
             android:id="@+id/button9"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/n9"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
+            android:onClick="onDigit"
 
 
 
@@ -83,23 +87,25 @@
             android:layout_margin="2dp"
             android:id="@+id/button_Divide"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/divide"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
+            android:onClick="onDigit"
             android:textSize="25sp"
+
             />
 
     </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="3dp"
+        android:layout_weight="1"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
         >
 
 
@@ -107,26 +113,25 @@
             android:layout_margin="2dp"
             android:id="@+id/button4"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onDigit"
             android:textColor="@color/white"
             android:text="@string/n4"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
-
-
-
             />
 
         <Button
             android:layout_margin="2dp"
             android:id="@+id/button5"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/n5"
+            android:onClick="onDigit"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
@@ -138,10 +143,67 @@
             android:layout_margin="2dp"
             android:id="@+id/button6"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/n6"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+            android:onClick="onDigit"
+
+
+
+            />
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button_Mul"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/mul"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:onClick="onDigit"
+            android:textSize="25sp"
+
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        >
+
+
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="onDigit"
+            android:textColor="@color/white"
+            android:text="@string/n1"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+            />
+
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/n2"
+            android:onClick="onDigit"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
@@ -151,12 +213,69 @@
             />
         <Button
             android:layout_margin="2dp"
-            android:id="@+id/button_Mul"
+            android:id="@+id/button3"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:textColor="@color/white"
-            android:text="@string/mul"
+            android:text="@string/n3"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+            android:onClick="onDigit"
+
+
+
+            />
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button_minus"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/min"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:onClick="onDigit"
+            android:textSize="25sp"
+
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        >
+
+
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button0"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:onClick="onDigit"
+            android:textColor="@color/white"
+            android:text="@string/num0"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+            />
+
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button_decimalr"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/decimal"
+            android:onClick="onDecimalPoint"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
@@ -164,20 +283,69 @@
 
 
             />
-    </LinearLayout>
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/Plus"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/Plus"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+            android:onClick="onDigit"
 
+
+
+        />
+
+    </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_weight="1"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
         >
 
 
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/equal"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:onClick="onDigit"
+            android:textColor="@color/white"
+            android:text="@string/Equals"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+            />
 
+        <Button
+            android:layout_margin="2dp"
+            android:id="@+id/button_clr"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/clr"
+            android:onClick="onCLear"
+            android:background="@drawable/borders"
+            app:backgroundTint="@color/black"
+            android:textSize="25sp"
+
+
+
+            />
 
 
 
     </LinearLayout>
+
 
 
 
