Calculator application completed

--- a/myCalculator/app/src/main/res/layout/activity_main.xml
+++ b/myCalculator/app/src/main/res/layout/activity_main.xml
@@ -275,7 +275,7 @@
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/decimal"
-            android:onClick="onDecimalPoint"
+            android:onClick="onDecimal"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
@@ -317,7 +317,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:onClick="onDigit"
+            android:onClick="onEquals"
             android:textColor="@color/white"
             android:text="@string/Equals"
             android:background="@drawable/borders"
@@ -333,7 +333,7 @@
             android:layout_weight="1"
             android:textColor="@color/white"
             android:text="@string/clr"
-            android:onClick="onCLear"
+            android:onClick="onClear"
             android:background="@drawable/borders"
             app:backgroundTint="@color/black"
             android:textSize="25sp"
