--- a/Quiz_App/app/src/main/res/values/colors.xml
+++ b/Quiz_App/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="topBlue">#5F7BE6</color>
+    <color name="bottompurple">#8918F7</color>
 </resources>
