--- a/Quiz_App/app/src/main/res/layout/activity_my_questions.xml
+++ b/Quiz_App/app/src/main/res/layout/activity_my_questions.xml
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/dafault_button"
+            android:background="@drawable/dafault_button_bg"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
@@ -85,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/dafault_button"
+            android:background="@drawable/dafault_button_bg"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
@@ -98,7 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/dafault_button"
+            android:background="@drawable/dafault_button_bg"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
@@ -111,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/dafault_button"
+            android:background="@drawable/dafault_button_bg"
             android:gravity="center"
             android:padding="15dp"
             android:textColor="#7A8089"
@@ -125,8 +125,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/dafault_button"
-            app:backgroundTint="@color/topBlue"
+            android:background="@drawable/dafault_button_bg"
+            app:backgroundTint="@color/bottompurple"
             android:text="@string/SUBMIT"
             android:textColor="@color/white"
             android:textSize="18sp"
